fix: css; gp contact info flex items alignment
Orig `text-align: center;` leaves the flex items (<a>) take up the entire width of the flex track which means hovering over the flex track ((far) away from the link) triggers the <a> hover effect; not good UI; `align-items` flex track property fixes this

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -260,7 +260,7 @@ img {
 
 .gp-contact-info-header,
 .gp-contact-info-header--desktop {
-	text-align: right;
+	align-items: flex-end;
 }
 
 main {
@@ -308,6 +308,7 @@ main {
 }
 
 .gp-contact-info-index-pg {
+	align-items: center;
 	font-size: 1.4em;
 	margin-bottom: 40px;
 
